--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -47,9 +47,9 @@ rule all:
         expand("{out}/{sample}/assembly_lineage/", 
                sample=[s for s in SAMPLES if "assembly_lineage_determination" in config["Species"][sample_to_organism[s]]["analyses_to_run"]],
                out=OUT_FOLDER),
-        expand("{out}/{sample}/illumina_lineage/", 
-               sample=[s for s in SAMPLES if "Illumina_lineage_determination" in config["Species"][sample_to_organism[s]]["analyses_to_run"]],
-               out=OUT_FOLDER),
+       #  expand("{out}/{sample}/illumina_lineage/", 
+       #         sample=[s for s in SAMPLES if "Illumina_lineage_determination" in config["Species"][sample_to_organism[s]]["analyses_to_run"]],
+       #       out=OUT_FOLDER),
         expand("{out}/{sample}/plasmidfinder/", 
                sample=[s for s in SAMPLES if "plasmidfinder" in config["Species"][sample_to_organism[s]]["analyses_to_run"]],
                out=OUT_FOLDER),
