--- a/workflow/envs/plasmidfinder.yaml
+++ b/workflow/envs/plasmidfinder.yaml
@@ -2,6 +2,8 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - python=3.9
   - plasmidfinder
   - kma
-  - blast
+  - cgecore
+  - tabulate
