--- a/workflow/configs_species/E.coli.yaml
+++ b/workflow/configs_species/E.coli.yaml
@@ -16,8 +16,8 @@ analyses_to_run:
         status : False
         Title: Typing of M protein gene using blast against CDC curated alleles
         cov_threshold: 90
-        emm_allele_file: /dpssi/home/scrsim/ssi_analysis_utility/resources/emm_typing/emm_alleles.fasta  # Fasta file with emm alleles
-        emm_cluster_file: /dpssi/home/scrsim/ssi_analysis_utility/resources/emm_typing/emm_enn_mrp_subgroups.txt  # File with emm allele clusters
+        emm_allele_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/emm_typing/emm_alleles.fasta  # Fasta file with emm alleles
+        emm_cluster_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/emm_typing/emm_enn_mrp_subgroups.txt  # File with emm allele clusters
         
     assembly_lineage_determination: 
         status : False
@@ -25,10 +25,10 @@ analyses_to_run:
         percent_snp_threshold: 50
         nucmerargs : ""
         deltafilterargs : -q -r -o 100
-        reference_fasta_file: /dpssi/home/scrsim/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta
-        lineage_variant_file: /dpssi/home/scrsim/ssi_analysis_utility/resources/lineage_determination/Spyogenes_LOCs.tsv
-        query_fasta_resistance_gene_detection: /dpssi/home/scrsim/ssi_analysis_utility/resources/AMR/AMR_genes.fasta  # Fasta file with AMR genes
-        query_fasta_virulence_gene_detection: /dpssi/home/scrsim/ssi_analysis_utility/resources/virulence_factors/VFDB_genes.fasta  # Fasta file with virulence genes
+        reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta
+        lineage_variant_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/Spyogenes_LOCs.tsv
+        query_fasta_resistance_gene_detection: /home/simonescrima/Desktop/ssi_analysis_utility/resources/AMR/AMR_genes.fasta  # Fasta file with AMR genes
+        query_fasta_virulence_gene_detection: /home/simonescrima/Desktop/ssi_analysis_utility/resources/virulence_factors/VFDB_genes.fasta  # Fasta file with virulence genes
 
     resistance_gene_detection: 
         status : False
@@ -43,19 +43,19 @@ analyses_to_run:
     plasmidfinder: 
         status : True
         Title : Plasmidfinder
-        database: /dpssi/data/Projects/MICROBIAL_SURVEILLANCE/proj/Databases/cge_dbs/plasmidfinder_db/  # Path to PlasmidFinder database
+        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/plasmidfinder_db/  # Path to PlasmidFinder database
 
     resfinder: 
         status : False
         Title : Resfinder
-        resfinder_db: /dpssi/home/scrsim/conda_envs/.venv/share/resfinder-4.6.0/resfinder_db  # ResFinder database for AMR detection
-        pointfinder_db: /dpssi/home/scrsim/conda_envs/.venv/share/resfinder-4.6.0/pointfinder_db  # PointFinder database for AMR point mutations
-        disinfinder_db: /dpssi/home/scrsim/conda_envs/.venv/share/resfinder-4.6.0/disinfinder_db  # DisinFinder database for disinfectant resistance
+        resfinder_db: /home/simonescrima/Desktop/ssi_analysis_utility/resources/resfinder-4.6.0/resfinder_db  # ResFinder database for AMR detection
+        pointfinder_db: /home/simonescrima/Desktop/ssi_analysis_utility/resources/pointfinder_db  # PointFinder database for AMR point mutations
+        disinfinder_db: /home/simonescrima/Desktop/ssi_analysis_utility/resources/disinfinder_db  # DisinFinder database for disinfectant resistance
 
     virulencefinder : 
         status : False
         Title : Virulence finder
-        database: /dpssi/home/scrsim/conda_envs/.venv/share/virulencefinder-2.0.4/virulencefinder_db  # VirulenceFinder database
+        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/virulencefinder_db  # VirulenceFinder database
 
     lre-finder: 
         status : False
