Fixed all the envs yaml file Fixed rule kma,emm_typing and most finders Fixed E.coli yaml

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ output/*
 examples/
 resources/
 output/
-
+.snakemake/
 _proc/
 # The following files ignored are part of a standard python project with minor additions
 _docs/
