--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -55,30 +55,30 @@ for species in set(sample_to_organism.values()):
 # Define the dynamic input for rule all
 rule all:
     input:
-        expand(
-            "{out}/{sample}/kma/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["kmeraligner"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/emm_typing/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["emm_typing"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/blast/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["resistance_gene_detection"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
+        # expand(
+        #     "{out}/{sample}/kma/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["kmeraligner"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
+        # expand(
+        #     "{out}/{sample}/emm_typing/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["emm_typing"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),       
+        # expand(
+        #     "{out}/{sample}/blast/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["resistance_gene_detection"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
         expand(
             "{out}/{sample}/assembly_lineage/", 
             sample=[
@@ -87,86 +87,78 @@ rule all:
             ],
             out=OUT_FOLDER
         ),
-        expand(
-            "{out}/{sample}/illumina_lineage/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["resistance_gene_detection"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/plasmidfinder/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["plasmidfinder"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/resfinder/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["resfinder"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/virulencefinder/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["virulencefinder"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/lre-finder/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["lre-finder"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/serotypefinder/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["serotypefinder"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/kleborate/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["kleborate"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/chtyper/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["chtyper"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/kmerfinder/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["kmerfinder"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
-        expand(
-            "{out}/{sample}/cgmlstfinder/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["cgMLSTFinder"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
+        # expand(
+        #     "{out}/{sample}/plasmidfinder/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["plasmidfinder"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
+        # expand(
+        #     "{out}/{sample}/resfinder/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["resfinder"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
+        # expand(
+        #     "{out}/{sample}/virulencefinder/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["virulencefinder"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
+        # expand(
+        #     "{out}/{sample}/lre-finder/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["LRE-finder"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
+        # expand(
+        #     "{out}/{sample}/serotypefinder/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["serotypefinder"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
+        # expand(
+        #     "{out}/{sample}/kleborate/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["kleborate"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
+        # expand(
+        #     "{out}/{sample}/chtyper/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["chtyper"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
+        # expand(
+        #     "{out}/{sample}/kmerfinder/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["kmerfinder"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
+        # expand(
+        #     "{out}/{sample}/cgmlstfinder/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["cgMLSTFinder"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
 
 
 
