--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -79,14 +79,14 @@ rule all:
         #     ],
         #     out=OUT_FOLDER
         # ),
-        expand(
-            "{out}/{sample}/assembly_lineage/", 
-            sample=[
-                s for s in SAMPLES 
-                if species_configs[sample_to_organism[s]]["analyses_to_run"]["assembly_lineage_determination"]["status"] is True
-            ],
-            out=OUT_FOLDER
-        ),
+        # expand(
+        #     "{out}/{sample}/assembly_lineage/", 
+        #     sample=[
+        #         s for s in SAMPLES 
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["assembly_lineage_determination"]["status"] is True
+        #     ],
+        #     out=OUT_FOLDER
+        # ),
         # expand(
         #     "{out}/{sample}/plasmidfinder/", 
         #     sample=[
@@ -139,7 +139,7 @@ rule all:
         #     "{out}/{sample}/chtyper/", 
         #     sample=[
         #         s for s in SAMPLES 
-        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["chtyper"]["status"] is True
+        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["CHtyper"]["status"] is True
         #     ],
         #     out=OUT_FOLDER
         # ),
@@ -151,14 +151,14 @@ rule all:
         #     ],
         #     out=OUT_FOLDER
         # ),
-        # expand(
-        #     "{out}/{sample}/cgmlstfinder/", 
-        #     sample=[
-        #         s for s in SAMPLES 
-        #         if species_configs[sample_to_organism[s]]["analyses_to_run"]["cgMLSTFinder"]["status"] is True
-        #     ],
-        #     out=OUT_FOLDER
-        # ),
+        expand(
+            "{out}/{sample}/cgmlstfinder/", 
+            sample=[
+                s for s in SAMPLES 
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["cgMLSTFinder"]["status"] is True
+            ],
+            out=OUT_FOLDER
+        ),
 
 
 
