--- a/workflow/configs_species/E.coli.yaml
+++ b/workflow/configs_species/E.coli.yaml
@@ -23,8 +23,8 @@ analyses_to_run:
         status : True
         Title: Lineage determination based on presence of specified SNPs when mapping genome assembly against reference genome
         percent_snp_threshold: 50
-        nucmerargs : ""
-        deltafilterargs : -q -r -o 100
+        nucmerargs : "\"\""
+        deltafilterargs : "\"-q -r -o 100\""
         reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta
         lineage_variant_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/Spyogenes_LOCs.tsv
 
@@ -43,14 +43,14 @@ analyses_to_run:
     plasmidfinder: 
         status : True
         Title : Plasmidfinder
-        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/plasmidfinder_db  # Path to PlasmidFinder database
+        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/plasmidfinder_db/  # Path to PlasmidFinder database
 
     resfinder: 
         status : True
         Title : Resfinder
-        resfinder_db: /home/simonescrima/Desktop/ssi_analysis_utility/resources/resfinder_db  # ResFinder database for AMR detection
-        pointfinder_db: /home/simonescrima/Desktop/ssi_analysis_utility/resources/pointfinder_db  # PointFinder database for AMR point mutations
-        disinfinder_db: /home/simonescrima/Desktop/ssi_analysis_utility/resources/disinfinder_db  # DisinFinder database for disinfectant resistance
+        resfinder_db: /home/simonescrima/Desktop/ssi_analysis_utility/resources/resfinder_db/ # ResFinder database for AMR detection
+        pointfinder_db: /home/simonescrima/Desktop/ssi_analysis_utility/resources/pointfinder_db/  # PointFinder database for AMR point mutations
+        disinfinder_db: /home/simonescrima/Desktop/ssi_analysis_utility/resources/disinfinder_db/  # DisinFinder database for disinfectant resistance
 
     virulencefinder : 
         status : True
@@ -62,24 +62,24 @@ analyses_to_run:
         Title : LRE-Finder
         min_consensus_ID : 80
         additional_option : -1t1 -cge -matrix
-        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lre-finder_db  # Database for LRE-finder
+        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lre-finder_db/elm  # Database for LRE-finder
 
     serotypefinder :
         status : True 
         Title : Serotypefinder
-        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/serotypefinder_db  # SerotypeFinder database
+        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/serotypefinder_db/  # SerotypeFinder database
     
     kleborate : 
         status : True
         Title : Kleborate
         preset : kpsc
 
-    chtyper : 
+    CHtyper : 
         status : True
         Title: Chtyper
         threshold : 0.90
         coverage : 0.60
-        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/chtyper_db  # CHTyper database
+        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/chtyper_db/  # CHTyper database
     
     kmerfinder : 
         status : False
@@ -88,7 +88,7 @@ analyses_to_run:
         database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/kmerfinder_db/kmerfinder_db_old/bacteria.ATG  # KmerFinder database for bacterial genomes
 
     cgMLSTFinder : 
-        status : False
+        status : True
         Title : cgMLST
-        scheme : salmonella # choose between  salmonella,campylobacter,yersinia,clostridium,ecoli
-        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/cgmlstfinder_db  # cgMLSTFinder database
+        scheme : ecoli # choose between  salmonella,campylobacter,yersinia,clostridium,ecoli
+        database: /home/simonescrima/Desktop/ssi_analysis_utility/resources/cgmlstfinder_db/  # cgMLSTFinder database
