--- a/workflow/envs/CHtyper.yaml
+++ b/workflow/envs/CHtyper.yaml
@@ -2,6 +2,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-   - python=3.9
-   - kma
-   - ete3
+  - python=3.9
+  - blast
+  - tabulate
+  - biopython
